RESOLVED FIXED203464
Fix nth-child An+B serialization to match the spec
https://bugs.webkit.org/show_bug.cgi?id=203464
Summary Fix nth-child An+B serialization to match the spec
Simon Fraser (smfr)
Reported 2019-10-26 14:21:05 PDT
Fix nth-child An+B serialization to match the spc
Attachments
Patch (609.90 KB, patch)
2019-10-26 14:23 PDT, Simon Fraser (smfr)
no flags
Archive of layout-test-results from ews211 for win-future (14.29 MB, application/zip)
2019-10-26 15:44 PDT, EWS Watchlist
no flags
Patch (620.84 KB, patch)
2019-10-26 23:08 PDT, Simon Fraser (smfr)
koivisto: review+
Simon Fraser (smfr)
Comment 1 2019-10-26 14:23:00 PDT
Radar WebKit Bug Importer
Comment 2 2019-10-26 14:23:26 PDT
EWS Watchlist
Comment 3 2019-10-26 15:44:30 PDT
Comment on attachment 382019 [details] Patch Attachment 382019 [details] did not pass win-ews (win): Output: https://webkit-queues.webkit.org/results/13181963 New failing tests: css3/parsing-css3-nthchild.html fast/dom/css-selectorText.html css3/filters/blur-various-radii.html
EWS Watchlist
Comment 4 2019-10-26 15:44:32 PDT
Created attachment 382020 [details] Archive of layout-test-results from ews211 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews211 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Sam Weinig
Comment 5 2019-10-26 16:16:07 PDT
Comment on attachment 382019 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=382019&action=review > Source/WebCore/css/CSSSelector.cpp:425 > + str.append("n+"); > + str.append(b); StringBuilder::append supports a variable number of arguments, so this (and the one above) can be written as str.append("n+", b); It is slightly more efficient.
Simon Fraser (smfr)
Comment 6 2019-10-26 23:08:08 PDT
Antti Koivisto
Comment 7 2019-10-27 01:59:12 PDT
Comment on attachment 382023 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=382023&action=review Astonishing amount of test coverage for something of so little significance! > Source/WebCore/css/CSSSelector.cpp:393 > +{ 'str' is not a great name (yes, that's what the existing code uses).
Simon Fraser (smfr)
Comment 8 2019-10-27 22:00:06 PDT
Note You need to log in before you can comment on or make changes to this bug.