LayoutTests/imported/w3c: Fix nth-child An+B serialization to match the spc https://bugs.webkit.org/show_bug.cgi?id=203464

Reviewed by Antti Koivisto.

New passing results.

* web-platform-tests/css/css-syntax/anb-parsing-expected.txt:
* web-platform-tests/css/css-syntax/anb-serialization-expected.txt:
* web-platform-tests/css/cssom/selectorSerialize-expected.txt:
* web-platform-tests/css/selectors/anplusb-selector-parsing-expected.txt:

Source/WebCore:
Fix nth-child An+B serialization to match the spec
https://bugs.webkit.org/show_bug.cgi?id=203464

Reviewed by Antti Koivisto.

The spec says to expand "odd" and "even" to "2n+1" and "2n", and to simplify
things like "1n+1" and "0n"

Tested by existing tests.

* css/CSSSelector.cpp:
(WebCore::outputNthChildAnPlusB):
(WebCore::CSSSelector::selectorText const):

LayoutTests:
Fix nth-child An+B serialization to match the spc
https://bugs.webkit.org/show_bug.cgi?id=203464

Reviewed by Antti Koivisto.

New results. Some tests that assumed that the selectors simply round-trip had to be
fixed to supply test and expected selectors.

* css3/parsing-css3-nthchild-expected.txt:
* css3/parsing-css3-nthchild.html:
* fast/css/css-selector-text-expected.txt:
* fast/css/css-selector-text.html:
* fast/css/css-set-selector-text-expected.txt:
* fast/css/css-set-selector-text.html:
* fast/css/parsing-css-matches-1-expected.txt:
* fast/css/parsing-css-matches-1.html:
* fast/css/parsing-css-matches-2-expected.txt:
* fast/css/parsing-css-matches-2.html:
* fast/css/parsing-css-matches-4-expected.txt:
* fast/css/parsing-css-matches-4.html:
* fast/css/parsing-css-not-1-expected.txt:
* fast/css/parsing-css-not-1.html:
* fast/css/parsing-css-not-2-expected.txt:
* fast/css/parsing-css-not-2.html:
* fast/css/parsing-css-not-4-expected.txt:
* fast/css/parsing-css-not-4.html:
* fast/css/parsing-css-nth-child-expected.txt:
* fast/css/parsing-css-nth-child-of-1-expected.txt:
* fast/css/parsing-css-nth-child-of-1.html:
* fast/css/parsing-css-nth-child-of-2-expected.txt:
* fast/css/parsing-css-nth-child-of-2.html:
* fast/css/parsing-css-nth-child.html:
* fast/css/parsing-css-nth-last-child-of-1-expected.txt:
* fast/css/parsing-css-nth-last-child-of-1.html:
* fast/css/parsing-css-nth-last-child-of-2-expected.txt:
* fast/css/parsing-css-nth-last-child-of-2.html:
* fast/dom/css-selectorText-expected.txt:

Canonical link: https://commits.webkit.org/216874@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251647 268f45cc-cd09-0410-ab3c-d52691b4dbfc